continued revision of orangefosset

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -90,38 +90,33 @@
                 <h4>Water Heating and Distribution</h4>
                 <ul>
                   <li>
-                    <strong>Heating Water for Community Use</strong>: The heated water is then directed towards a co-located public shower facility, integrated within the system. This facility provides hot showers to users, leveraging the thermal energy recovered from bitcoin mining operations. The water temperature is regulated to ensure it meets safety and comfort standards for users.
+                    <strong>Heating Water for Community Use</strong>: The heated water is then directed towards a co-located public shower facility, both of which are housed in a modified shipping container. This facility provides hot showers to users, leveraging the thermal energy recovered from bitcoin mining operations. The water temperature is regulated to ensure it meets safety and comfort standards for users.
                   </li>
                   <li>
-                    <strong>Dynamic Energy and Cost Management</strong>: OrangeFosset's operational model is designed to optimize energy use and costs. During periods of peak renewable energy generation and low demand, the system can offer showers at lower costs, zero cost, or even at negative pricing, incentivizing usage when it's most energy-efficient and economically feasible. This is made possible by OrangeFossets relationships with energy providers through methods such as power purchase agreements \(PPA\), and time of use \(TOU\) planning and settled using the bitcoin second layer lightning network.
+                    <strong>Dynamic Energy and Cost Management</strong>: OrangeFosset's operational model is designed to optimize energy use and costs. During periods of peak energy generation and low demand, the system can offer showers at lower costs, zero cost, or even at negative pricing, incentivizing usage when it's most energy-efficient and economically feasible. This is made possible by OrangeFossets relationships with energy providers through methods such as power purchase agreements \(PPA\), and time of use \(TOU\) planning and settled using the bitcoin second layer lightning network. Second-order effects of this practice is that OrangeFosset acts as a buyer of first resort for otherwise wasted energy - a result of lack of market demand and intermittencies in overbuilt renewable sources.
                   </li>
                 </ul>
                 <h4>Community Engagement and Accessibility</h4>
                 <ul>
                   <li>
-                    <strong>Accessible Hygiene Services</strong>: By providing low-cost, zero-cost, or negatively priced showers, OrangeFosset addresses the critical need for hygiene services in underserved communities, including unhoused people. This initiative not only improves public health but also supports social inclusion and dignity.
+                    <strong>Accessible Hygiene Services</strong>: By providing low-cost, zero-cost, or negatively priced showers, OrangeFosset addresses the critical need for hygiene services in underserved communities, including unhoused persons. This initiative not only improves public health but also supports social inclusion and dignity.
                   </li>
                   <li>
                     <strong>Economic and Environmental Benefits</strong>: The system promotes environmental sustainability by maximizing the use of renewable energy and minimizing waste. It also offers an economic model that supports the viability of bitcoin mining operations through enhanced energy efficiency and new revenue streams from the provision of showers and incentivising use during off-peak energy conditions.
                   </li>
                   <li>
-                    <strong>Technological Integration</strong>: OrangeFosset incorporates advanced controls for temperature and mining operation management, a potential bitcoin lightning POS system for seamless transactions, and a maintenance bounty system. These features ensure the facility's efficient operation, user accessibility, and system sustainability.
+                    <strong>Technological Integration</strong>: OrangeFosset incorporates advanced controls for temperature and mining operation management, a potential bitcoin lightning POS system for seamless transactions, and plans for a maintenance bounty program. These features ensure the facility's efficient operation, user accessibility, and system sustainability.
                   </li>
                 </ul>
-                <p>OrangeFosset stands at the crossroads of technology, sustainability, and community service. By reimagining the potential of bitcoin mining's byproduct heat, it offers a practical solution to pressing social needs while paving the way for a more sustainable and inclusive future.</p>
+                <p>OrangeFosset stands at the crossroads of technology, sustainability, and community service. </p>
                 
                 <p>OrangeFosset's unique system interlinks Bitcoin mining operations with a sophisticated water heating mechanism. 
-                  <strong>This dual-functionality not only maximizes energy efficiency but also turns the only waste byproduct - heat - into a valuable resource.</strong> 
-                  Our system operates in a cycle of sustainability:</p>
-                <ol>
-                    <li>Electricity Input for Bitcoin Mining: We start with renewable energy, fueling the mining rigs responsible for securing and expanding the Bitcoin network.</li>
-                    <li>Heat Recovery and Water Heating: The heat generated from mining is not wasted. Instead, it's captured and used to heat water, which is then made available to the community.</li>
-                    <li>Community Service: The provision of hot water supports local needs: providing showers those who need it, and potentially partnering with local businesses and organizations for their hot water needs, ensuring that the benefits of our innovation reach everyone.</li>
-                </ol>
-
+                  <strong>This dual-functionality not only maximizes energy efficiency but also turns the singular waste byproduct - heat - into a valuable resource.</strong> 
+                  By reimagining the potential of bitcoin mining's heat byproduct, it offers a practical solution to pressing social needs while paving the way for a more sustainable and inclusive future.</p>
+                
                 <h2>The Container Build</h2>
                 <img src="URL-to-Facility-Blueprint" alt="Blueprint of OrangeFosset Facility">
-                <p>A detailed blueprint of our state-of-the-art facility, showcasing the integration of technology and utility.</p>
+                <p>A blueprint of the proposed facility, showcasing the integration of technology and utility, in an easily reproducible, scalable, and mobile form.</p>
 
                 <p>Our facilities are designed with precision, integrating the most efficient of Bitcoin mining hardware with advanced heat exchange systems. This seamless integration ensures not just the optimal operation of our mining activities but also the efficient transfer of heat to water, minimizing energy loss and maximizing community benefit.</p>
 
