added img for taxedsats entry. updated portfolio page rm eco add taxedsats, updated index revise order, update karaoke rm emoji, update bitcoin rm blog add thesis, update orangefosset revise color content.

--- a/orangefosset.html
+++ b/orangefosset.html
@@ -48,15 +48,15 @@
       </nav>
     </div>
   </header>
-  <div style = "color: #FFFFFF; background-color: #F7931A;" class="main">
-    <div style = "color: #FFFFFF; background-color: #F7931A;" class="container">
+  <div style = "color: #FFFFFF; background-color: #222222;" class="main">
+    <div style = "color: #FFFFFF; background-color: #222222;" class="container">
         <div class="row">
             <div  id="banner" class="twelve columns">
               <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
-              <h2 id="statement"> <strong">ORANGE</strong><strong style="color: #2A52BE">FOSSET</strong></h2>
+              <h2 id="statement"> <strong style = "color: #F7931A;">ORANGE</strong><strong style="color: #2A52BE">FOSSET</strong></h2>
               <div id="bitcoin" class = "twelve columns">
               </br>
-                <a href="./shower.pdf" style="text-decoration: none;"><button style="color:#FFFFFF; display: block; margin-left: auto; margin-right: auto;">READ THE ORANGEFOSSET WHITEPAPER</button></a>
+                <!--a href="./shower.pdf" style="text-decoration: none;"><button style="color:#FFFFFF; display: block; margin-left: auto; margin-right: auto;">READ THE ORANGEFOSSET WHITEPAPER</button></a-->
               </br></br>
                 <strong>BITCOIN IS FOR HUMAN RIGHTS.
                 </br>THE RIGHT TO FINANCIAL INCLUSION  
@@ -128,10 +128,7 @@
                 <img src="URL-to-Energy-and-Price-Dynamics-Graphs" alt="Energy and Price Dynamic Graphs">
                 <p>Understand the interplay between energy input, mining productivity, and the pricing of our services.</p>
 
-                <p>Join Us in Fostering Innovation for Social Good</p>
-                <p>OrangeFosset is more than a system; it's a movement towards a future where technology and welfare go hand in hand. We invite you to join us in this journey, to support a project that stands at the intersection of innovation, sustainability, and community service. Together, we can redefine what's possible, turning the heat of today's technology into the warm embrace of community well-being.</p>
-                <p>For media inquiries, partnerships, or to learn more, <a href="URL-to-Contact-Page">contact us</a>.</p>
-                <p><strong>OrangeFosset</strong>: Technology, Community, Sustainability.</p>
+                <p>For media inquiries, partnerships, or to learn more, <a href="mailto:everythingxbtc@gmail.com">contact us</a>.</p>
             </div>
         </div>
     </div>
