--- a/karaokecompass.html
+++ b/karaokecompass.html
@@ -69,21 +69,21 @@
         <strong>Enhanced Karaoke Experience: Personalized, Data-Informed, and Seamlessly Integrated</strong>
         <p>Optimized for all skill levels, the custom GPT-4 ensures user-friendly and powerful interactions, providing tailored song selections for everyone from the novice karaoke enthusiast to the competitive performer:</p>
         <ul style="list-style-type: none;">
-            <li>👤 Comprehensive Preference Analysis: Capable of analyzing and integrating a wide array of user preferences, from vocal range to genre preference, ensuring a highly personalized recommendation list.</li>
-            <li>📁 Data-Driven Insights: Utilizes users' uploaded song histories or CSV/PDF files to refine and enhance recommendation accuracy.</li>
-            <li>🎵 Karaoke-Version Integration: Recommendations include direct links to Karaoke-Version, allowing users to access and enjoy their karaoke selections seamlessly.</li>
+            <li>Comprehensive Preference Analysis: Capable of analyzing and integrating a wide array of user preferences, from vocal range to genre preference, ensuring a highly personalized recommendation list.</li>
+            <li>Data-Driven Insights: Utilizes users' uploaded song histories or CSV/PDF files to refine and enhance recommendation accuracy.</li>
+            <li>Karaoke-Version Integration: Recommendations include direct links to Karaoke-Version, allowing users to access and enjoy their karaoke selections seamlessly.</li>
         </ul>
         <strong>Advanced ML Prompting Techniques: Tailored Interactions for Enhanced User Engagement</strong>
         <p>KaraokeCompass is equipped with a variety of response strategies to address different types of user inquiries:</p>
         <ul style="list-style-type: none;">
-            <li>🎯 Intuitive Selection: For broad and general inquiries, ensuring a natural and user-friendly interaction.</li>
-            <li>🔍 Exploratory Analysis: For in-depth exploration of specific themes or preferences, providing comprehensive insights.</li>
-            <li>💬 User Interaction: For instances requiring direct engagement to clarify or detail user preferences.</li>
-            <li>📊 Structured Recommendations: For organized and detailed requests, ensuring a systematic and coherent response.</li>
-            <li>🎨 Analogical Reasoning: For queries benefitting from comparison to other genres or artists, enriching the recommendation process.</li>
-            <li>📝 Concise Summarization: For requests necessitating brief and summarized responses, enhancing clarity and conciseness.</li>
-            <li>✅ Verification: For ensuring song accuracy and relevance, maintaining high-quality recommendations.</li>
-            <li>🔄 Iterative Refinement: For evolving recommendations based on feedback, ensuring a dynamic and adaptive recommendation system.</li>
+            <li>Intuitive Selection: For broad and general inquiries, ensuring a natural and user-friendly interaction.</li>
+            <li>Exploratory Analysis: For in-depth exploration of specific themes or preferences, providing comprehensive insights.</li>
+            <li>User Interaction: For instances requiring direct engagement to clarify or detail user preferences.</li>
+            <li>Structured Recommendations: For organized and detailed requests, ensuring a systematic and coherent response.</li>
+            <li>Analogical Reasoning: For queries benefitting from comparison to other genres or artists, enriching the recommendation process.</li>
+            <li>Concise Summarization: For requests necessitating brief and summarized responses, enhancing clarity and conciseness.</li>
+            <li>Verification: For ensuring song accuracy and relevance, maintaining high-quality recommendations.</li>
+            <li>Iterative Refinement: For evolving recommendations based on feedback, ensuring a dynamic and adaptive recommendation system.</li>
         </ul>
         </br>
 
@@ -94,7 +94,7 @@
             <strong>Artist Name - Song Title</strong><br>
             <strong>Relevant Information:</strong> Additional details tailored to the user's request.<br>
             <strong>Access Link:</strong> <a href="https://www.karaoke-version.com/karaoke/" target="new">Direct link to the song on Karaoke-Version.</a>
-        </p>
+          </p>
       </div>
       <div class = "twelve columns" id="contact">
 		    <a href="mailto:theospatial@gmail.com"><button class = "footbutton">theospatial@gmail.com</button></a> 
