--- a/karaokecompass.html
+++ b/karaokecompass.html
@@ -64,8 +64,10 @@
             <div id="karaoke" class = "twelve columns">
             
         <p>KaraokeCompass is a state-of-the-art GPT model tailored for karaoke enthusiasts, offering a unique and personalized song recommendation service. This sophisticated system integrates a multifaceted approach to cater to a wide range of user preferences such as vocal range, mood, energy, danceability, and lyrical content, ensuring an engaging and enjoyable karaoke experience.</p>
-</br>
-        <h4>Unique Features:</h4>
+</br></br>
+<a href="https://chatgpt.com/g/g-IJPLRGtJa-karaokecompass-song-recommendations" style="text-decoration: none;"><button style="color: #000000; display: block; margin-left: auto; margin-right: auto;"><strong style="color: #2A52BE;">KARAOKE</strong><strong style="color: #EE3560;">COMPASS</strong> ON THE GPTSTORE</button></a>
+</br></br>
+<h4>Unique Features:</h4>
         <strong>Enhanced Karaoke Experience: Personalized, Data-Informed, and Seamlessly Integrated</strong>
         <p>Optimized for all skill levels, the custom GPT-4 ensures user-friendly and powerful interactions, providing tailored song selections for everyone from the novice karaoke enthusiast to the competitive performer:</p>
         <ul style="list-style-type: none;">
